--- a/tasks/package.json
+++ b/tasks/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.2",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-regenerator": "6.26.0",
     "babel-polyfill": "6.26.0",
@@ -28,7 +28,7 @@
     "eslint-plugin-import": "2.9.0",
     "eslint-plugin-react": "7.7.0",
     "file-loader": "2.0.0",
-    "jest": "^24.8.0",
+    "jest": "23.6.0",
     "prop-types": "15.6.1",
     "style-loader": "0.20.3",
     "webpack": "4.25.1",
