--- a/tasks/package.json
+++ b/tasks/package.json
@@ -13,15 +13,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-function-sent": "^7.12.1",
-    "@babel/plugin-proposal-json-strings": "^7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.12.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-decorators": "7.12.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.12.1",
+    "@babel/plugin-proposal-function-sent": "7.12.1",
+    "@babel/plugin-proposal-json-strings": "7.12.1",
+    "@babel/plugin-proposal-numeric-separator": "7.12.5",
+    "@babel/plugin-proposal-throw-expressions": "7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-syntax-import-meta": "7.10.4",
     "@babel/plugin-transform-regenerator": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.5",
@@ -45,7 +45,7 @@
     "@skbkontur/react-icons": "4.3.1",
     "@skbkontur/react-ui": "2.7.0",
     "immutability-helper": "3.1.1",
-    "process": "^0.11.10",
+    "process": "0.11.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
