--- a/tasks/package.json
+++ b/tasks/package.json
@@ -44,6 +44,8 @@
   "dependencies": {
     "@skbkontur/react-icons": "4.3.1",
     "@skbkontur/react-ui": "2.7.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "immutability-helper": "3.1.1",
     "process": "0.11.10",
     "react": "17.0.1",
@@ -54,6 +56,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "regenerator-runtime": "0.13.7",
-    "save": "2.4.0"
+    "save": "2.4.0",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   }
 }
