--- a/tasks/package.json
+++ b/tasks/package.json
@@ -25,6 +25,9 @@
     "@babel/plugin-transform-regenerator": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.5",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
     "babel-eslint": "8.2.2",
     "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
@@ -44,8 +47,6 @@
   "dependencies": {
     "@skbkontur/react-icons": "4.3.1",
     "@skbkontur/react-ui": "2.7.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "immutability-helper": "3.1.1",
     "process": "0.11.10",
     "react": "17.0.1",
