--- a/tasks/package.json
+++ b/tasks/package.json
@@ -31,7 +31,7 @@
     "css-loader": "5.0.1",
     "eslint": "7.12.1",
     "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-react": "7.21.5",
     "file-loader": "6.2.0",
     "jest": "26.6.3",
@@ -42,19 +42,19 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
+    "@reduxjs/toolkit": "1.8.3",
     "@skbkontur/react-icons": "4.4.0",
     "@skbkontur/react-ui": "2.14.1",
-    "immutability-helper": "^3.1.1",
-    "process": "^0.11.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-create-reducer": "^2.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
-    "regenerator-runtime": "^0.13.9",
-    "save": "^2.4.0"
+    "immutability-helper": "3.1.1",
+    "process": "0.11.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.6",
+    "redux": "4.1.2",
+    "redux-create-reducer": "2.0.1",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.4.1",
+    "regenerator-runtime": "0.13.9",
+    "save": "2.4.0"
   }
 }
