--- a/tasks/package.json
+++ b/tasks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-tasks",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
