--- a/tasks/.babelrc
+++ b/tasks/.babelrc
@@ -1,35 +1,32 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
-  "plugins": [
-    [
-      "@babel/plugin-transform-regenerator",
-      {
-        "asyncGenerators": false,
-        "generators": false,
-        "async": true
-      }
-    ],
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
-    "@babel/plugin-proposal-function-sent",
-    "@babel/plugin-proposal-export-namespace-from",
-    "@babel/plugin-proposal-numeric-separator",
-    "@babel/plugin-proposal-throw-expressions",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-syntax-import-meta",
-    [
-      "@babel/plugin-proposal-class-properties",
-      {
-        "loose": true
-      }
-    ],
-    "@babel/plugin-proposal-json-strings"
-  ]
+	"presets": ["@babel/preset-env", "@babel/preset-react"],
+	"plugins": [
+		[
+			"@babel/plugin-transform-regenerator",
+			{
+				"asyncGenerators": false,
+				"generators": false,
+				"async": true
+			}
+		],
+		[
+			"@babel/plugin-proposal-decorators",
+			{
+				"legacy": true
+			}
+		],
+		"@babel/plugin-proposal-function-sent",
+		"@babel/plugin-proposal-export-namespace-from",
+		"@babel/plugin-proposal-numeric-separator",
+		"@babel/plugin-proposal-throw-expressions",
+		"@babel/plugin-syntax-dynamic-import",
+		"@babel/plugin-syntax-import-meta",
+		[
+			"@babel/plugin-proposal-class-properties",
+			{
+				"loose": true
+			}
+		],
+		"@babel/plugin-proposal-json-strings"
+	]
 }
