--- a/tasks/package.json
+++ b/tasks/package.json
@@ -1,59 +1,65 @@
 {
-  "name": "redux-tasks",
-  "version": "2.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode development && exit 0",
-    "start": "webpack serve --mode development --env development",
-    "test": "jest ./src/1.Sandglass/"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-proposal-decorators": "7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "7.12.1",
-    "@babel/plugin-proposal-function-sent": "7.12.1",
-    "@babel/plugin-proposal-json-strings": "7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "7.12.5",
-    "@babel/plugin-proposal-throw-expressions": "7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-syntax-import-meta": "7.10.4",
-    "@babel/plugin-transform-regenerator": "7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.5",
-    "babel-eslint": "8.2.2",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.1.0",
-    "css-loader": "5.0.1",
-    "eslint": "7.12.1",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "7.21.5",
-    "file-loader": "6.2.0",
-    "jest": "26.6.3",
-    "prop-types": "15.7.2",
-    "style-loader": "2.0.0",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "3.11.2"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
-    "@skbkontur/react-icons": "4.4.0",
-    "@skbkontur/react-ui": "3.12.5",
-    "process": "0.11.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.8",
-    "redux": "4.2.0",
-    "redux-create-reducer": "2.0.1",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.4.1",
-    "regenerator-runtime": "0.13.9",
-    "save": "2.5.0"
-  }
+	"name": "redux-tasks",
+	"version": "2.1.0-alpha.1",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack --mode development && exit 0",
+		"start": "webpack serve --mode development --env development",
+		"test": "jest ./src/1.Sandglass/"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "7.12.3",
+		"@babel/plugin-proposal-class-properties": "7.12.1",
+		"@babel/plugin-proposal-decorators": "7.12.1",
+		"@babel/plugin-proposal-export-namespace-from": "7.12.1",
+		"@babel/plugin-proposal-function-sent": "7.12.1",
+		"@babel/plugin-proposal-json-strings": "7.12.1",
+		"@babel/plugin-proposal-numeric-separator": "7.12.5",
+		"@babel/plugin-proposal-throw-expressions": "7.12.1",
+		"@babel/plugin-syntax-dynamic-import": "7.8.3",
+		"@babel/plugin-syntax-import-meta": "7.10.4",
+		"@babel/plugin-transform-regenerator": "7.12.1",
+		"@babel/preset-env": "7.12.1",
+		"@babel/preset-react": "7.12.5",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.19",
+		"@types/react-redux": "7.1.33",
+		"@types/redux-logger": "3.0.9",
+		"@typescript-eslint/eslint-plugin": "6.20.0",
+		"babel-eslint": "8.2.2",
+		"babel-jest": "26.6.3",
+		"babel-loader": "8.1.0",
+		"css-loader": "5.0.1",
+		"eslint": "7.32.0",
+		"eslint-loader": "4.0.2",
+		"eslint-plugin-import": "2.29.1",
+		"eslint-plugin-react": "7.21.5",
+		"file-loader": "6.2.0",
+		"jest": "26.6.3",
+		"prettier": "3.2.5",
+		"prop-types": "15.7.2",
+		"style-loader": "2.0.0",
+		"ts-loader": "9.5.1",
+		"typescript": "4.9.5",
+		"webpack": "5.73.0",
+		"webpack-cli": "4.10.0",
+		"webpack-dev-server": "3.11.2"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "1.9.7",
+		"@skbkontur/react-icons": "5.2.9",
+		"@skbkontur/react-ui": "4.21.0",
+		"process": "0.11.10",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "8.1.2",
+		"redux": "4.2.1",
+		"redux-logger": "3.0.6",
+		"regenerator-runtime": "0.13.9",
+		"save": "2.5.0"
+	}
 }
